<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Welcome" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie"
            android:title="@string/menu_movieList" />

        <item
            android:id="@+id/nav_watch"
            android:icon="@drawable/ic_watch"
            android:title="@string/menu_watchList" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/menu_ratedList" />

        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contactus"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>